--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,29 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/ChapChap
+    #    url: jdbc:log4jdbc:mysql://localhost:3306/WebAppBoard
+    username: root
+    password: rkd@798546
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  devtools:
+    livereload:
+      enabled: true
+  #    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#  servlet:
+#    multipart:
+#      location: ${user.dir}/src/main/resources/static/public/img
+#      max-file-size: 1MB
+#      max-request-size: 5MB
+#img:
+#  upload:
+#    path: ${user.dir}/src/main/resources/static/public/img
+#
+#static:
+#  path: ${user.dir}/src/main/resources/static
 
+server:
+  port: 8070
+
+mybatis:
+  type-aliases-package: com.acorn.chapspring.dto
+  mapper-locations: mapper/*Mapper.xml
