--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:log4jdbc:mysql://localhost:3306/CHAPCHAP
     username: root
-    password: rkd@798546
+    password: mysql123
     #driver-class-name: com.mysql.cj.jdbc.Driver
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
   devtools:
