--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:log4jdbc:mysql://localhost:3306/CHAPCHAP
+    url: jdbc:log4jdbc:mysql://localhost:3306/chapchap
     username: root
     password: ${db.password}
     #driver-class-name: com.mysql.cj.jdbc.Driver
