--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:log4jdbc:mysql://localhost:3306/chapchap
     username: root
-    password: rkd@798546
-#    password: ${db.password}
+#    password: rkd@798546
+    password: ${db.password}
 
     #driver-class-name: com.mysql.cj.jdbc.Driver
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
