--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.webjars.npm:bootstrap:5.2.3'
 	implementation 'org.webjars.npm:bootstrap-icons:1.10.3'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.0.4'
+	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
