--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,8 @@ server:
 mybatis:
   type-aliases-package: com.acorn.chapspring.dto
   mapper-locations: mapper/*Mapper.xml
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count:countSql
