--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.0.4'
 	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
+	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.0.4'
 }
 
 tasks.named('test') {
